Working piece of sewaConnect